Let LayoutSelection visit children of display:content element.

We stopped traversal flat tree when Node didn't have a LayoutObject
but Slot elements appear in the tree w/o LayoutObject.
This patch enables LayoutSelection to visit children of
such elements.

Bug: 870734
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: Id4f7c135fceead131f37485ecb8fa326834d72c3
Reviewed-on: https://chromium-review.googlesource.com/1164724
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Yoichi Osato <yoichio@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581825}
Former-commit-id: 6e0111a9500d75ea8af9a99a30b7d7025df4ed07